tests/neg/T1078.hs
import qualified Data.ByteString.Char8
import qualified Data.ByteString

example :: Char
example = Data.ByteString.Char8.head Data.ByteString.Char8.empty

